@@ -61,9 +61,10 @@ Changes for 1.7.0
 
 Changes for 1.6.6
 
+ - [ZBX-213] added sql patches for graphs_items color field (Artem)
  - [ZBX-933] fixed user profile auto-logout behavior (Artem)
  - [ZBX-908] fixed item nextcheck recalculation on item update (Artem)
- - [ZBX-965] fixed color in graph legend (artem)
+ - [ZBX-965] fixed color in graph legend (Artem)
  - [ZBX-966] added sorting in map creation form (Artem)
  - [ZBX-824] fixed net.tcp.service to work with host DNS name (Alexei)
  - [ZBX-967] cosmetic changes in --help output of zabbix_get and zabbix_sender (Alexei)
